--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,12 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
         <!-- 4.Spring -->
         <!-- 1)Spring核心 -->
         <dependency>
