--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/agriculture?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://223.3.88.120:3306/agriculture?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=root
+jdbc.password=linux
